# Racecar-MPC-Simulation

./: CMakeLists.txt  GlModel.cpp  GlModel.hpp  LICENSE  OpenGlWrappers.cpp  OpenGlWrappers.hpp  Path.cpp  Path.hpp  README.md  RaceWindow.cpp  RaceWindow.hpp  RgbImage.cpp  RgbImage.hpp  Simulation.cpp  Simulation.hpp  any_color.fs  any_color.vs  cone.fs  cone.vs  main.cpp  solid_color.vs
modules/: FindGUROBI.cmake
